# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: PythonCI.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  asgi.py  mixins.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
task_manager/fixtures/browser/: db_labels.json  db_statuses.json  db_tasks.json  db_users.json  test_data.json
task_manager/fixtures/tasks/: db_labels.json  db_statuses.json  db_tasks.json  db_users.json  test_tasks.json  test_users.json
task_manager/fixtures/users/: test_users_data.json
task_manager/labels/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templatetags/: __init__.py  get_filter_url_label_tags.py
task_manager/statuses/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: __init__.py  admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_auto_20211222_1230.py  (+1 more)
task_manager/templates/: base.html  home.html  layout.html  pagination.html
task_manager/tests/: test_i18.py
task_manager/users/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+41 files in other folders)
