[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["takeitawaytu <takeitawaytu@gmail.com>"]

packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
dj-database-url = "^0.5.0"
whitenoise = "^5.3.0"
psycopg2 = "^2.9.2"
django-bootstrap4 = "^21.1"
coverage = "^6.2"
django-filter = "^21.1"
rollbar="^0.16.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
